[gd_scene load_steps=15 format=3 uid="uid://bk5cj4vt600fw"]

[ext_resource type="Script" path="res://main.gd" id="1_dkgit"]
[ext_resource type="Script" path="res://world.gd" id="2_5pf3l"]
[ext_resource type="Script" path="res://menus/gui.gd" id="3_5trqk"]
[ext_resource type="PackedScene" uid="uid://bewap3blcn6p6" path="res://level/level.tscn" id="3_s1u4l"]
[ext_resource type="PackedScene" uid="uid://dxmtgq1vffaeq" path="res://menus/main_menu_screen.tscn" id="4_nqhdg"]
[ext_resource type="PackedScene" uid="uid://diecf34cipg7k" path="res://player/player.tscn" id="4_qqmf7"]
[ext_resource type="PackedScene" uid="uid://wn7300ox6nll" path="res://scanner/scanner.tscn" id="6_qxux1"]
[ext_resource type="PackedScene" uid="uid://dg5ljrugpyfv2" path="res://menus/pause_screen.tscn" id="8_dfw4l"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_j6kb4"]

[sub_resource type="Sky" id="Sky_mudlv"]
sky_material = SubResource("ProceduralSkyMaterial_j6kb4")

[sub_resource type="Environment" id="Environment_lciql"]
background_mode = 2
sky = SubResource("Sky_mudlv")

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_owjb4"]

[sub_resource type="Gradient" id="Gradient_lwvfo"]
offsets = PackedFloat32Array(0, 0.550459, 0.633027, 0.667431)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pfw6s"]
gradient = SubResource("Gradient_lwvfo")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_dkgit")

[node name="World" type="Node3D" parent="."]
process_mode = 1
script = ExtResource("2_5pf3l")

[node name="Level" parent="World" instance=ExtResource("3_s1u4l")]

[node name="Player" parent="World" instance=ExtResource("4_qqmf7")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_lciql")
camera_attributes = SubResource("CameraAttributesPractical_owjb4")

[node name="Scanner" parent="World" instance=ExtResource("6_qxux1")]
transform = Transform3D(-2.18557e-07, 0, 1, 0, 1, 0, -1, 0, -2.18557e-07, -0.154526, 0, 2.90315)

[node name="PackageSpawnTimer" type="Timer" parent="World"]
wait_time = 2.0
autostart = true

[node name="GUI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_5trqk")

[node name="MainMenuScreen" parent="GUI" instance=ExtResource("4_nqhdg")]
layout_mode = 1

[node name="PauseScreen" parent="GUI" instance=ExtResource("8_dfw4l")]
visible = false
layout_mode = 1

[node name="Cursor" type="TextureRect" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.5
offset_top = -6.5
offset_right = 6.5
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_pfw6s")
expand_mode = 1

[connection signal="timeout" from="World/PackageSpawnTimer" to="World" method="_on_package_spawn_timer_timeout"]
[connection signal="game_started" from="GUI" to="." method="_on_gui_game_started"]
[connection signal="unpaused" from="GUI" to="." method="_on_gui_unpaused"]
[connection signal="game_started" from="GUI/MainMenuScreen" to="GUI" method="_on_main_menu_screen_game_started"]
[connection signal="closed" from="GUI/PauseScreen" to="GUI" method="_on_pause_screen_closed"]
